@@ -15,7 +15,9 @@ Release 1.9.1 (2019-06-24)
 - Upgraded bundled SQLite to version 3.28.0
 - Added project/solution files for Visual Studio 2019
 - Fixed Visual Studio project files (version information from DLLVersion.rc not included in DLLs)
+- Include version resource in DLLs built with CMake
 - fixed GH #2220: Encoding/DoubleByteEncoding.cpp fails to compile with VS2008 and _DEBUG
+- fixed GH #2243: DLLVersion.rc is excluded from build, missing detail information in properties of *.dll
 - fixed GH #2277: SQLite null pointer dereference occurs when exception is being thrown
 - fixed GH #2313: PollSet behaves differently on windows
 - fixed GH #2316: cmake can't find MySQL and ODBC libraries
